IDEMPIERE-6989 Distributed Cache: Redis - ClusterMember serialises host as String
Heartbeat writes were failing every 10 seconds with a Kryo serialisation
error. Redisson's default Kryo5Codec uses reflection to read InetAddress
private fields (specifically InetAddressHolder); JDK 17 closes off
java.net from reflection by default ("module java.base does not opens
java.net to unnamed module").

Refactored ClusterMember so the InetAddress is no longer the persisted
form. The address is stored as a String (numeric IP via
InetAddress.getHostAddress()) and InetAddress is reconstructed lazily on
the IClusterMember.getAddress() accessor. Kryo now sees only String + int
+ String fields with no JDK-internal reflection involved, so heartbeat
writes succeed without requiring --add-opens JVM flags or operator-side
Redis configuration changes.

The new field layout works with any Redisson codec (Kryo5, Jackson, Java
serialization, Fury) — the wire form is now codec-portable and matches
the canonical wire format used by other distributed systems for IP
addresses.

serialVersionUID bumped 1L -> 2L because the persisted shape changed.
Old heartbeat keys written by the previous version would fail to
deserialise — they will TTL-expire within 30 s, no migration needed.

Constructor signature unchanged — callers still pass InetAddress; the
internal storage handles the conversion.