@@ -27,6 +27,7 @@ package org.idempiere.redis.service;
 
 import java.io.Serializable;
 import java.net.InetAddress;
+import java.net.UnknownHostException;
 
 import org.idempiere.distributed.IClusterMember;
 
@@ -34,17 +35,29 @@ import org.idempiere.distributed.IClusterMember;
  * Value object identifying one cluster member. Stored in Redis under a
  * heartbeat key so other nodes can discover live members.
  *
+ * <p>The address is persisted as a {@code String} (numeric IP via
+ * {@link InetAddress#getHostAddress()}) rather than the {@link InetAddress}
+ * itself: codecs such as Kryo5 use reflection on JDK classes to serialise
+ * {@code InetAddress}, and JDK 17 closes off {@code java.net} from reflection
+ * by default ({@code module java.base does not "opens java.net" to unnamed
+ * module}). Storing a String avoids that constraint without requiring callers
+ * to pass {@code --add-opens} JVM flags. The {@link #getAddress()} accessor
+ * lazily reconstructs the {@link InetAddress} from the String on first call.</p>
+ *
  * <p>Mutable fields and a no-arg constructor are kept on purpose so that
  * codecs which require POJO-style hydration (Kryo, Fury, Jackson) can
  * deserialize without reflection-into-final-fields contortions.</p>
  */
 public class ClusterMember implements IClusterMember, Serializable {
 
-	private static final long serialVersionUID = 1L;
+	private static final long serialVersionUID = 2L;
 
 	private String id;
-	private InetAddress address;
+	/** Numeric IP address as a String — what we actually serialise. */
+	private String host;
 	private int port;
+	/** Cached {@link InetAddress} reconstructed lazily from {@link #host}; never serialised. */
+	private transient InetAddress addressCache;
 
 	/** Required by serialization codecs. Do not call directly. */
 	public ClusterMember() {
@@ -52,8 +65,9 @@ public class ClusterMember implements IClusterMember, Serializable {
 
 	public ClusterMember(String id, InetAddress address, int port) {
 		this.id = id;
-		this.address = address;
+		this.host = (address == null) ? null : address.getHostAddress();
 		this.port = port;
+		this.addressCache = address;
 	}
 
 	@Override
@@ -63,7 +77,17 @@ public class ClusterMember implements IClusterMember, Serializable {
 
 	@Override
 	public InetAddress getAddress() {
-		return address;
+		InetAddress cached = addressCache;
+		if (cached != null || host == null) {
+			return cached;
+		}
+		try {
+			cached = InetAddress.getByName(host);
+			addressCache = cached;
+			return cached;
+		} catch (UnknownHostException e) {
+			return null;
+		}
 	}
 
 	@Override
@@ -73,6 +97,6 @@ public class ClusterMember implements IClusterMember, Serializable {
 
 	@Override
 	public String toString() {
-		return "ClusterMember[id=" + id + ", address=" + address + ", port=" + port + "]";
+		return "ClusterMember[id=" + id + ", host=" + host + ", port=" + port + "]";
 	}
 }
